--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "http-server": "^14.1.1",
+    "mini-css-extract-plugin": "^2.8.1",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
     "style-loader": "^3.3.4",
