--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
-  "compilerOptions": {
-    "baseUrl": "app/src",
-    "outDir": "build",
-    "module": "CommonJS",
-    "target": "ES5",
-    "sourceMap": true,
-    "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "moduleDetection": "auto"
-  },
-  "exclude": ["node_modules"]
+	"compilerOptions": {
+		"noImplicitAny": true,
+		"removeComments": true,
+		"preserveConstEnums": true,
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"sourceMap": true,
+		"module": "CommonJS",
+		"target": "ES6",
+		"lib": ["dom", "es6"],
+		"typeRoots": ["./@types", "./node_modules/@types"]
+	}
 }
