Improved building system

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,24 @@
 {
 	"compilerOptions": {
-		"noImplicitAny": true,
-		"removeComments": true,
-		"preserveConstEnums": true,
-		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
-		"sourceMap": true,
-		"module": "CommonJS",
-		"target": "ES6",
-		"lib": ["dom", "es6"],
-		"typeRoots": ["./@types", "./node_modules/@types"]
-	}
+		"target": "ES2020",
+		"useDefineForClassFields": true,
+		"module": "ESNext",
+		"outDir": "./dist/",
+		"lib": ["ES2020", "DOM", "DOM.Iterable"],
+		"skipLibCheck": true,
+
+		/* Bundler mode */
+		"moduleResolution": "bundler",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+
+		/* Linting */
+		"strict": false,
+		"strictPropertyInitialization": false,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noFallthroughCasesInSwitch": true
+	},
+	"include": ["src"],
+	"exclude": ["node_modules", "**/*.spec.ts"]
 }
