--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "chess-p5js",
-  "version": "0.1.0",
-  "description": "Chess Game!",
-  "author": {
-    "name": "Angelo Belcastro",
-    "email": "angelo.belcastro01@gmail.com",
-    "url": "https://angelobdev.github.io/"
-  },
-  "license": "MIT",
-  "private": true,
-  "scripts": {
-    "start": "webpack serve --open --mode development",
-    "build": "webpack --mode production",
-    "serve": "webpack --mode production && http-server dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/p5": "^1.7.6",
-    "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^6.10.0",
-    "html-webpack-plugin": "^5.6.0",
-    "http-server": "^14.1.1",
-    "mini-css-extract-plugin": "^2.8.1",
-    "sass": "^1.72.0",
-    "sass-loader": "^14.1.1",
-    "style-loader": "^3.3.4",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.4.2",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2"
-  },
-  "dependencies": {
-    "p5": "^1.9.1"
-  }
+	"name": "chess-p5js",
+	"main": "src/index.ts",
+	"version": "0.1.0",
+	"description": "Chess Game!",
+	"author": {
+		"name": "Angelo Belcastro",
+		"email": "angelo.belcastro01@gmail.com",
+		"url": "https://angelobdev.github.io/"
+	},
+	"license": "MIT",
+	"private": true,
+	"scripts": {
+		"dev": "webpack-dev-server --config config/webpack.dev.js --open",
+		"build": "webpack --config config/webpack.prod.js"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.24.3",
+		"@babel/preset-env": "^7.24.3",
+		"@types/bun": "latest",
+		"@types/p5": "^1.7.6",
+		"babel-loader": "^9.1.3",
+		"copy-webpack-plugin": "^12.0.2",
+		"html-webpack-plugin": "^5.6.0",
+		"mini-css-extract-plugin": "^2.8.1",
+		"webpack": "^5.90.3",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^5.0.4",
+		"sass": "^1.72.0",
+		"css-loader": "^6.10.0",
+		"sass-loader": "^14.1.1",
+		"style-loader": "^3.3.4",
+		"ts-loader": "^9.5.1",
+		"url-loader": "^4.1.1"
+	},
+	"peerDependencies": {
+		"typescript": "^5.0.0"
+	},
+	"dependencies": {
+		"p5": "^1.9.2"
+	}
 }
